--- a/assets/css/style-default.css
+++ b/assets/css/style-default.css
@@ -978,7 +978,7 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 
 .cs-main .hero-section {
 	padding: 120px 0 0 0;
-	background: #ffeaf7 !important;
+	background: #fff !important;
 }
 
 .cs-main .hero-content {
